[package]
name = "druid-shell"
version = "0.4.0"
license = "Apache-2.0"
authors = ["Raph Levien <raph.levien@gmail.com>"]
description = "Platform abstracting application shell used for druid toolkit."
repository = "https://github.com/xi-editor/druid"
readme = "README.md"
categories = ["os::macos-apis", "os::windows-apis", "gui"]
edition = "2018"

[features]
#### use_gtk = ["gtk", "gtk-sys", "gio", "gdk", "gdk-sys", "glib", "glib-sys", "cairo-rs"]

#### [package.metadata.docs.rs]
#### default-target = "x86_64-pc-windows-msvc"

[dependencies]
piet-common = { version = "0.0.7", path = "../../piet-embedded/piet-common", default_features = false, features = ["embedded"] } ####

#### log = "0.4.8"
#### lazy_static = { version = "1.0", default_features = false, features = ["spin_no_std"] }
#### time = "0.1.39"
cfg-if = "0.1.10"

#### cairo-rs = {  version = "0.7.1", default_features = false, optional = true }
#### gio = { version = "0.7.0", optional = true }
#### gdk = { version = "0.11.0", optional = true }
#### gdk-sys = { version = "0.9.0", optional = true }
#### gtk = { version = "0.7.0", optional = true }
#### glib = { version = "0.8.1", optional = true }
#### glib-sys = { version = "0.9.0", optional = true }
#### gtk-sys = { version = "0.9.0", optional = true }
embedded-graphics = { version = "0.5.2", optional = true }

[target.'cfg(target_os="windows")'.dependencies]
#### directwrite = "0.1.2"
#### direct2d = "0.2.0"
#### wio = "0.2"

#### [target.'cfg(target_os="windows")'.dependencies.winapi]
#### version = "0.3.6"
#### features = ["d2d1_1", "dwrite", "winbase", "libloaderapi", "errhandlingapi", "winuser", "shellscalingapi", "shobjidl", "combaseapi", "synchapi", "dxgi1_3", "dcomp", "d3d11", "dwmapi", "wincon", "fileapi", "processenv", "winbase", "handleapi"]

#### [target.'cfg(target_os="macos")'.dependencies]
#### cocoa = "0.20.0"
#### objc = "0.2.5"
#### cairo-rs = { version = "0.7.1", default_features = false }

#### [target.'cfg(target_os="linux")'.dependencies]
#### cairo-rs = {  version = "0.7.1", default_features = false }
#### gio = "0.7.0"
#### gdk = "0.11.0"
#### gdk-sys = "0.9.0"
#### glib = "0.8.1"
#### glib-sys = "0.9.0"
#### gtk-sys = "0.9.0"

#### [target.'cfg(target_os="linux")'.dependencies.gtk]
#### version = "0.7.0"
#### features = ["v3_20"]

[target.'cfg(all(target_arch = "arm", target_os = "none"))'.dependencies]
embedded-graphics = "0.5.2" ####
st7735-lcd        = { features = [ "graphics" ], path = "../../st7735-lcd-batch-rs" } #### TODO: https://github.com/lupyuen/st7735-lcd-batch-rs
mynewt            = { path = "../../stm32bluepill-mynewt-sensor/rust/mynewt" } # Import mynewt library
cortex-m          = "0.6.1" ####
cortex-m-rt       = "0.6.10" ####
